--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "groq-sdk": "^0.3.3",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-type-animation": "^3.2.0"
