--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daynight": "^3.3.1",
     "groq-sdk": "^0.3.3",
     "openai": "^4.40.2",
     "react": "^18.2.0",
