--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
