--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.11",
     "daynight": "^3.3.1",
+    "groq-sdk": "^0.5.0",
     "openai": "^4.40.2",
     "openmeteo": "^1.1.4",
     "react": "^18.2.0",
