--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@tanstack/react-query": "^5.51.11",
     "daynight": "^3.3.1",
     "groq-sdk": "^0.5.0",
-    "openai": "^4.40.2",
+    "openai": "^4.55.1",
     "openmeteo": "^1.1.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-type-animation": "^3.2.0",
-    "react-use": "^17.5.1"
+    "react-use": "^17.5.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.51.12",
