--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.0",
     "react-type-animation": "^3.2.0",
     "react-use": "^17.5.1",
+    "remark-gfm": "^4.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
