--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["./src/components/*"],
       "@utils/*": ["./src/utils/*"]
     },
 
